--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "iview-loader": "^1.1.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vueisotope": "^3.1.2"
+    "vueisotope": "^3.1.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.3",
