--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "isotope-layout": "^3.0.6",
     "iview": "^2.14.3",
     "iview-loader": "^1.1.0",
+    "sass-loader": "^7.0.3",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vueisotope": "^3.1.2",
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-rc.3",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
     "@vue/cli-service": "^3.0.0-rc.3",
+    "node-sass": "^4.9.0",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
