--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "isotope-layout": "^3.0.6",
     "iview": "^2.14.3",
     "iview-loader": "^1.1.0",
