--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isotope-layout": "^3.0.6",
     "iview": "^2.14.3",
     "iview-loader": "^1.1.0",
+    "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vueisotope": "^3.1.2",
