--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iview-loader": "^1.1.0",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vueisotope": "^3.1.2",
     "vuex": "^3.0.1"
@@ -24,6 +25,7 @@
     "@vue/cli-service": "^3.0.0-rc.3",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
+    "vue-cli-plugin-i18n": "^0.5.0",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
