--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   "dependencies": {
     "axios": "^0.18.0",
     "isotope-layout": "^3.0.6",
-    "iview": "^3.1.3",
+    "iview": "^3.2.2",
     "iview-loader": "^1.2.2",
-    "style-loader": "^0.21.0",
-    "vue": "^2.5.17",
-    "vue-i18n": "^8.2.1",
+    "style-loader": "^0.23.1",
+    "vue": "^2.6.6",
+    "vue-i18n": "^8.8.2",
     "vue-localforage": "^0.2.5",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vueisotope": "^3.1.2",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.0",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
-    "@vue/cli-service": "^3.0.0-rc.3",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^7.0.3",
-    "vue-cli-plugin-i18n": "^0.5.0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-i18n": "^0.5.1",
+    "vue-template-compiler": "^2.6.6"
   },
   "eslintConfig": {
     "root": true,
